--- a/Style.css
+++ b/Style.css
@@ -8,7 +8,6 @@
 body, html{
     height: 100%;
     margin: 0;
-    background-image: url(vacinaPhoto.webp);
 }
 
 .container {
@@ -16,11 +15,11 @@ body, html{
     justify-content: center; /* centraliza na horizontal */
     align-items: center;     /* centraliza na vertical */
     height: 100vh;           /* ocupa toda a altura da tela */
-    background-image: url(1600w-pmqy1JflyBc.webp);
+    background-image: url(background.png);
 
   }
   .quadro {
-    background-color:#f0f8ff;
+    background-color:#f1c994;
     height: 95%;
     padding-left: 20%;
     padding-right: 20%;
@@ -33,14 +32,15 @@ body, html{
   header h1{
     width: 380px;
     padding-top: 20px;
-    padding-bottom: 20px;    
+    padding-bottom: 20px;   
+   
   }
   #caixaIdade div {
     display: flex;
     flex-direction: column;
     align-items: flex-start; 
-    gap: 10px; 
-    padding: 30px;
+    gap: 5px; 
+    padding: 5px;
     width: 80%;
 
 
@@ -64,10 +64,9 @@ body, html{
     border-radius: 5px;
     width: 100%;
     font-size: large;
-    background-color: #357ABD;
-    color: #ffffff;
+    background-color: #72A16E;
     font-weight: 600;
-    border-color: #0b3768;
+    border-style: none;
     margin-bottom: 15px;
     
   }
@@ -117,8 +116,7 @@ body, html{
     background-color: #fafcfd;
     padding: 15px;
     border-radius: 5px;
-    border: 1px solid #000;
-    box-shadow: 2px 2px 6px #151627;
+    box-shadow: 2px 2px 6px #F4A97D ;
     margin-bottom: 10px;
     margin-top: 10px;
   }
@@ -128,13 +126,61 @@ body, html{
     font-size: large;
     font-weight: 700;
     padding: 10px;
-    background-color: #a9c0da;
+    background-color: #c4cfc2;
     border-radius: 5px;
     margin-bottom: 10px;
   }
 
-  .vacinas{
+  .vacinas button{
     display: flex;
     flex-direction: row;
+    font-size: 1em;
+    border: none;
+    padding:5px;
+    border-radius: 5px;
+    
+  }
+
+  .sidebar {
+    position: fixed;
+    top: 0;
+    right: -400px; /* Escondida inicialmente */
+    width: 300px;
+    height: 100%;
+    background-color: #f9f9f9;
+    box-shadow: -2px 0 5px rgba(0,0,0,0.2);
+    padding: 20px;
+    transition: right 0.3s ease;
+    z-index: 1000;
+  }
+  
+  .sidebar.ativa {
+    right: 0;
+  }
+
+
+  .titulo_info{
+    padding: 10px;
+    font-size: 2rem;
+  }
+
+  .vacina_info{
+    padding: 10px;
     font-size: 1.2em;
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  }
+  
+  .sidebar button{
+    padding: 10px;
+    width: 50%;
+    border-radius: 5px;
+    background-color:#72A16E;
+    font-weight: 700;
+    border-style: none;
+  }
+
+  h3{
+    font-size: 1.2rem;
+    color:#000;
+    font-weight: 400;
   }
